--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^16.4.2",
     "react-google-maps": "^9.4.5",
     "react-scripts": "^1.1.4",
+    "react-icons": "^2.2.7",
     "superagent": "^3.8.3"
   },
   "scripts": {
