--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-google-maps": "^9.4.5",
     "react-scripts": "^1.1.4",
     "react-icons": "^2.2.7",
+    "react-places-autocomplete": "^7.1.1",
     "superagent": "^3.8.3"
   },
   "scripts": {
